fixed title and menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ footer
 		position: fixed;
 
 		z-index: 1;
-		margin-top: -300px;
+		margin-top: -380px;
 		margin-left: 80%;
 	}
 
